--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </header>
 <ul id="nav">
   <li>
-    <a href="#/view1">view1</a>
+    <a ui-sref="view1">view1</a>
   </li>
   <li>
-    <a href="#/view2">view2</a>
+    <a ui-sref="view2">view2</a>
   </li>
 </ul>
 <div ng-controller="mainController">
